@startuml object_store_models
allowmixing
hide empty description

together {
    class ContentBlockDocument {
        content_id
        block_type
        title
    }
    database content_block_documents
    ContentBlockDocument .> content_block_documents
}

together {
    class ContentBlockEdition {
        details
        document_id
        state
    }
    database content_block_editions
    ContentBlockEdition .> content_block_editions
}

class ContentBlockEditionAuthor {
        user_id
        content_block_edition_id
}

class ContentBlockEditionOrganisation {
        organisation_id
        content_block_edition_id
}

class Organisation

ContentBlockDocument *-r- ContentBlockEdition : "has_many"
ContentBlockEdition *-r- ContentBlockEditionAuthor : "has_many"
ContentBlockEdition --> "1" ContentBlockEditionOrganisation
ContentBlockEditionOrganisation --> "1" Organisation

@enduml
